--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,22 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "lists/lists";
+
+.background-image {
+  position: fixed; /* Fija el contenedor en una posición fija */
+  top: 0;
+  left: 0;
+  width: 100%; /* Establece el ancho al 100% */
+  height: 50%; /* Establece la altura al 100% */
+  z-index: -1; /* Coloca el contenedor detrás de todo el contenido */
+  background-image: url('/assets/neom-NPDnHmYsl6Y-unsplash.jpg'); /* Ruta de la imagen */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* Fija la imagen de fondo */
+}
+
+.content {
+  padding: 20px; /* Ajusta según sea necesario */
+  margin-top: 20%;
+}
