--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New List</h1>
+<div class="content">
+  <h1>New List</h1>
+</div>
+  <%= simple_form_for @list do |form| %>
+    <div class="form-container">
+      <%= form.input :name, input_html: { style: 'width: 200px;' } %>
+      <%= form.button :submit, "Create List", class: "btn btn-primary" %>
+    </div>
+  <% end %>
 
-<%= simple_form_for @list do |form| %>
-  <%= form.input :name, input_html: { style: 'width: 200px;' } %>
-  <%= form.button :submit, "Create List", class: "btn btn-primary" %>
-
-<% end %>
-
-<%= link_to "Back", lists_path %>
+  <%= link_to "Back", lists_path %>
