--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
   background-image: url('/assets/neom-NPDnHmYsl6Y-unsplash.jpg'); /* Ruta de la imagen */
   background-size: cover;
   background-position: center;
-  background-attachment: fixed; /* Fija la imagen de fondo */
+  //background-attachment: fixed; /* Fija la imagen de fondo */
 }
 
 .content {
