--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import "pages/index";
 @import "lists/lists";
 
-.background-image {
+.background-image {//Colocar esto como imagen y no como fondo.
   position: fixed; /* Fija el contenedor en una posición fija */
   top: 0;
   left: 0;
