--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,51 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+/* En tu archivo SCSS */
+.navbar {
+  /* Estilos del navbar, asegúrate de incluir estilos específicos aquí */
+}
+.lists-content {
+  text-align: center; /* Alinea el contenido al centro */
+}
+.lists {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.list-item {
+  width: 200px;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  text-align: center;
+  transition: transform 0.3s ease;
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+.list-item {
+  text-align: center;
+  .list-image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  h3 {
+    font-size: 18px;
+  }
+}
+#new-list-link {
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #007BFF;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  &:hover {
+    background-color: #0056B3;
+  }
+}
